# parallel

./: .gitignore  .gitmodules  README.md  pyproject.toml
parallel/engine/: checkpoint.py  dataloader.py  logging.py  state.py  tracking.py
parallel/engine/utils/: consts.py  dataclasses.py  deepspeed.py  environment.py  helpers.py  imports.py  modeling.py  ops.py  random.py
parallel/parallel/: __init__.py  collectives.py  dataloader.py  dataset.py  eval.py  logging.py  profiling.py  state.py  tracking.py  train.py  utils.py
parallel/parallel/conf/: default.yaml
parallel/parallel/engine/: _dp_param_unit.py  _dp_sharded_utils.py  checkpoint.py  dp_sharded.py  engine.py  model_loading.py
parallel/parallel/engine/model_parallel/: __init__.py  api.py  checkpoint.py  expert_parallel.py  grad_norm.py  loss_parallel.py  plan.py  registry.py  sequence_parallel.py  tensor_parallel.py  token_dispatch.py
parallel/parallel/engine/model_parallel/models/: __init__.py  common.py  qwen3.py  qwen3_moe.py
parallel/parallel/scripts/: get_data.sh  install.sh
parallel/parallel/strategies/: dp.py
scripts/: install.sh  sync.sh
tests/: test_checkpoint.py  test_dataloader.py  test_dp_sharded.py  test_model_parallel.py  test_profiling.py  test_sequence_parallel.py  test_state.py
tests/gpu/: test_distributed_gpu.py
