[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel"
version = "0.0.1"
description = "Distributed training engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wandb",
    "datasets",
    "deepspeed",
    "torch==2.11.0",
    "torchvision",
    "torchaudio",
    "ipython",
    "python-dotenv",
    "omegaconf",
    "pytest",
    "numpy",
    "accelerate",
    "transformers",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["parallel*"]

# PyTorch CUDA wheels live on a separate index from PyPI.
# On Linux/Windows, uv resolves torch* from cu128; on macOS, falls back to PyPI.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
accelerate = { path = "parallel/accelerate", editable = true }
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
